# datalumos

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docker/: docker-compose.yaml
src/datalumos/: cli.py  config.py  logging.py  logging_utils.py  report_generator.py
src/datalumos/MCPs/: postgres.py
src/datalumos/agents/: assert_validity_flow.py  cli.py  column_analyser.py  config.py  data_explorer.py  data_validator.py  flow.py  main.py  profile_flow.py  tools.py  triage_agent.py  utils.py  validity_flow.py
src/datalumos/agents/agents/: accuracy_checker.py  categorical_accuracy_checker.py  column_analyser.py  data_explorer.py  data_validator.py  date_accuracy_checker.py  numerical_accuracy_checker.py  text_accuracy_checker.py  triage_agent.py
src/datalumos/agents/prompts/: column_analyser.md  data_explorer.md  data_validator.md  date_accuracy_checker.md  numerical_accuracy_checker.md  text_accuracy_checker.md  triage_agent.md
src/datalumos/connectors/: README.md  __init__.py  cli.py  config.py  examples.py  local_postgres_client.py  main.py  utils.py
src/datalumos/connectors/sources/: __init__.py  filesystem_source.py  postgres_source.py  s3_source.py
src/datalumos/core/: __init__.py  postgres_config.py
src/datalumos/flows/: flow.py
src/datalumos/flows/subflows/: assert_accuracy.py  assert_completeness.py  assert_validity.py  cache_utils.py  table_profiling.py
src/datalumos/knowledge/: README.md  __init__.py  cli.py  manager.py  uploader.py
src/datalumos/services/: __init__.py  postgres.py
src/datalumos/services/langfuse/: setup.py
src/datalumos/services/postgres/: config.py  connection.py
src/datalumos/tools/: file_search.py
tests/flows/subflows/: test_assert_validity.py
tests/flows/subflows/validation_cases/: days_left_case.py  utils.py
